# dotfiles

./: .gitignore  .secrets.env.example  README.md  install.sh
claude/: README.md
claude/.claude/hooks/: Cargo.toml  build.sh  mattermost-sync.py  zulip-sync-launcher.sh  zulip-sync.py
claude/.claude/hooks/src/: main.rs
claude/.config/systemd/user/: claude-mattermost.service  claude-zulip.service
nvim/.config/nvim/: lazy-lock.json  lazyvim.json
nvim/.config/nvim/lua/config/: autocmds.lua  highlights.lua  keymaps.lua  options.lua
nvim/.config/nvim/lua/plugins/: aerial.lua  codecompanion.lua  conform.lua  dap-php.lua  dialbe-codeium.lua  git.lua  lsp-config.lua  luasnip.lua  neogen.lua  overseer.lua  php.lua  phpactor.lua
nvim/.config/nvim/lua/plugins/dap/: init.lua
opencode/: README.md  install.sh
opencode/.config/systemd/user/: opencode-zulip.service
opencode/.opencode/hooks/: Cargo.toml  build.sh  opencode-zulip-sync-launcher.sh  opencode-zulip-sync.py
opencode/.opencode/hooks/src/: main.rs
tmux/: .tmux.conf
zsh/: .p10k.zsh  .zshrc
