[package]
name = "opencode-zulip-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
notify = "6.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
sha2 = "0.10"
dirs = "5.0"
hex = "0.4"
shellexpand = "3.0"

[[bin]]
name = "opencode-zulip-sync"
path = "src/main.rs"